--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>120天---带你从零到JAVA高手</h1>
-							<h2>第一期优惠班火爆开启，4月1日前报名享受2000元折扣</h2>
+							<h2>第一期优惠班火爆开启，6月1日前报名享受2000元折扣</h2>
 							<p><a class="btn btn-primary btn-lg btn-learn" href="#fh5co-explore">查看课程详情</a> <a class="btn btn-primary btn-lg  btn-video"
 							 href="javascript:refqq()"><i class="icon-play"></i> 咨询客服</a></p>
 						</div>
@@ -144,7 +144,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<h2>课程介绍</h2>
 					<p>京东商城支付业务一线大牛亲自教学 </p>
-					<p>以下课程价格，<a href="javascript:refqq()" class="blueA">联系客服</a>预报名可立减2000元</p>
+					<p>以下课程价格，<a href="javascript:refqq()" class="blueA">联系客服</a>预报名可立减500元</p>
 					<p>若您已掌握相关知识，可直接学习更深层次的知识</p>
 				</div>
 			</div>
@@ -154,9 +154,9 @@
 				<div class="row">
 					<div class="col-md-8 col-md-pull-0 animate-box">
 						<div class="mt">
-							<h3>  <font size="7" style="color: rgb(21, 190, 165);">JAVA基础班</font></h3>
+							<h3>  <font size="7" style="color: rgb(21, 190, 165);">JAVA Web就业班</font></h3>
 							<p>京东大牛亲自教授</p>
-							<p>¥8000 -90天（基础￥5000 + Web￥3000）可分开学习</p>
+							<p>¥5000 -90天</p>
 							<p>要求：零基础，一二三四年级均可学习，年级越低，优势越大</p>
 							<p>学习完此课程后，你将可以独立开发一个类似QQ的应用程序，或者一个类似学校教务系统的独立的网站.</p>
 							<ul class="list-nav">
@@ -275,8 +275,8 @@
 					<div class="col-md-8 col-md-pull-0 animate-box">
 						<div class="mt">
 							<h3><font size="7" style="color: rgb(21, 190, 165);">BATJ冲刺班</font> </h3>
-							<p>¥4000 -30天</p>
-							<p>要求：需先学习JAVA基础课程</p>
+							<p>¥3000 -30天</p>
+							<p>要求：需先学习JAVA Web 就业课程</p>
 							<p>学习完此课程后，你将有能力去BATJ等一线互联网公司面试的能力</p>
 							<ul class="list-nav">
 								<li><i class="icon-check2"></i>分布式应用开发</li>
