--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="光宇教育" />
 	<meta name="keywords" content="光宇,教育,光宇教育,guangyu,guangyujiaoyu" />
 	
-
+	<link rel="icon" href="images/gysmall.png" type="image/x-icon" />
 	<!-- <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet"> -->
 	
 	<!-- Animate.css -->
